# AgentsOfPhysics

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
cli/: __init__.py  esi_batch.py  esi_evaluate.py  esi_report.py  esi_stream.py
data/: gearbox_acoustic.csv  generator.csv  turbine.csv  turbine_labels.csv
docs/: adapters.md  features.md  quickstart.md
esi_agents/: __init__.py  schema.py
esi_agents/adapters/: __init__.py  base.py  csv.py  influxdb.py  mqtt.py  opcua.py  parquet.py  schema_registry.py  sqlite.py  timescale.py
esi_agents/agents/: __init__.py  batch_scorer.py  code_reviewer.py  data_ingestor.py  drift_monitor.py  evaluator.py  feature_engineer.py  logic_reviewer.py  model_selector.py  model_trainer.py  orchestrator.py  report_writer.py  stream_scorer.py
esi_agents/cli/: esi_batch.py  esi_evaluate.py  esi_report.py  esi_stream.py
esi_agents/configs/: gearbox_acoustic.yaml  generator_esi.yaml  turbine_vibration.yaml
esi_agents/docs/: __init__.py  adapters.md  features.md  quickstart.md
esi_agents/eval/: __init__.py  band_scan.py  calibration.py  metrics.py  plots.py
esi_agents/features/: __init__.py  envelope.py  freq.py  orders.py  time.py  windows.py
esi_agents/models/: __init__.py  ae_torch.py  arima_resid.py  base.py  hbos.py  isolation_forest.py  lof.py  ocsvm.py  stl_resid.py
esi_agents/tests/: conftest.py  test_adapters.py  test_csv_adapter.py  test_evaluator.py  test_features.py  test_models.py  test_optional_adapters.py  test_workflow.py
esi_agents/utils/: logging.py  random.py
esi_agents/workflows/: batch_pipeline.py  stream_pipeline.py
