[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "esi-agents"
version = "0.1.0"
description = "Multi-agent anomaly detection platform for ESI data"
readme = "README.md"
authors = [{name = "ESI Agents"}]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "scipy>=1.10",
    "statsmodels>=0.14",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
    "ruptures>=1.1.9",
    "tqdm>=4.66",
    "joblib>=1.3"
]

[project.optional-dependencies]
stream = [
    "paho-mqtt>=1.6",
    "python-opcua>=1.0"
]
db = [
    "influxdb-client>=1.36",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9"
]
deep = [
    "torch>=2.0"
]
dev = [
    "pytest>=7.4"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["esi_agents*"]
